--- a/Desafio Página de Receita/style.css
+++ b/Desafio Página de Receita/style.css
@@ -4,28 +4,58 @@
     box-sizing: border-box;
 }
 
-html{
+body{
     background-color:#EAEAEA;
+    font-family: 'Roboto', sans-serif;
+    
 }
 
-body{
+main{
+    
     background-color:#FFFFFF;
-    font-family: 'Roboto', sans-serif;
+    width: 900px;
+    margin: 30px auto;
+    border-radius: 10px;
+    padding: 50px 30px;
 }
 
 h1{
     font-size: 28px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+img{
+    width: 100%;
+    border-radius: 10px;
+    
 }
 
 h2{
     font-size: 20px;
+    text-align: center;
+    padding: 30px 0px 15px;
 }
 
-p, ul{
+p, li{
     font-size: 16px;
+}
+
+li{
+    line-height: 26px;
+    list-style-position:inside;
 }
 
 footer, figcaption{
     font-size: 12px;
+}
+
+footer{
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+figcaption{
+    text-align: right;
 }
 
